Agrego usuarios a la App

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+<div class="col">
 <h2>Listado de Posts</h2>
 <hr>
 <a href="/posts/new" class="btn btn-success">Crear Post</a>
@@ -40,3 +41,4 @@
         {{/each}}
     </tbody>
 </table>
+</div>
