--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,3 +1,4 @@
+<div class="col">
 <h2 class="m-4">Creando post</h2>
 
 <form action="/posts" method="POST">
@@ -14,3 +15,4 @@
 
 <button class="btn btn-primary mt-4">Enviar</button>
 </form>
+</div>
