--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,12 +1,9 @@
-<h2>Post</h2>
-
-<div>
-    
-<h3>{{ post.title }}</h3>
-    
+<div class="col">
+    <h2>Post</h2>
     <div>
-        {{ post.body }}
+        <h3>{{ post.title }}</h3>
+        <div>
+            {{ post.body }}
+        </div>
     </div>
 </div>
-
-
