--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -10,14 +10,10 @@
          {{!-- password --}}
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="text" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
+            <input type="password" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
         </div>
 
-         {{!--confirm password --}}
-        <div class="mb-3">
-            <label for="confirm_password" class="form-label">Confirmación de contraseña</label>
-            <input type="text" class="form-control" id="confirm_password"  name="confirm_password" placeholder="Repita su contraseña">
-        </div>
+         
 
         <button class="btn btn-primary">
             SignIn
