--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,7 +2,7 @@
     <form action="/auth/signup" method="POST">
         {{!--nombre --}}
         <div class="mb-3">
-            <label for="name" class="form-label">Email address</label>
+            <label for="name" class="form-label">Nombre</label>
             <input type="text" class="form-control" id="name"  name="name" placeholder="Ingrese su nombre">
         </div>
 
@@ -15,13 +15,13 @@
          {{!-- password --}}
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="text" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
+            <input type="password" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
         </div>
 
          {{!--confirm password --}}
         <div class="mb-3">
             <label for="confirm_password" class="form-label">Confirmación de contraseña</label>
-            <input type="text" class="form-control" id="confirm_password"  name="confirm_password" placeholder="Repita su contraseña">
+            <input type="password" class="form-control" id="confirm_password"  name="confirm_password" placeholder="Repita su contraseña">
         </div>
 
         <button class="btn btn-primary">
