--- a/views/new.hbs
+++ b/views/new.hbs
@@ -5,7 +5,7 @@
 
 <div class="form-control">
   <label for="title" class="form-label">Título</label>
-  <input type="email" class="form-control" id="title" name="title" placeholder="Ingrese el titulo del post">
+  <input type="text" class="form-control" id="title" name="title" placeholder="Ingrese el titulo del post">
 </div>
 
 <div class="form-control">
