--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -5,7 +5,7 @@
 
     <div class="form-control">
       <label for="title" class="form-label">Título</label>
-      <input type="email" class="form-control" id="title" name="title" value="{{post.title}}">
+      <input type="text" class="form-control" id="title" name="title" value="{{post.title}}">
     </div>
 
     <div class="form-control">
