--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,19 +1,27 @@
+{{#if todo_ok}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>{{todo_ok}}</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
+
 <div class="col">
     <form action="/auth/signin" method="POST">
-        
-         {{!-- correo --}}
+
+        {{!-- correo --}}
         <div class="mb-3">
-           <label for="email" class="form-label">Correo Electrónico</label>
-            <input type="email" class="form-control" id="email"  name="email" placeholder="Ingrese su email">
+            <label for="email" class="form-label">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email">
         </div>
 
-         {{!-- password --}}
+        {{!-- password --}}
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
+            <input type="password" class="form-control" id="password" name="password"
+                placeholder="Ingrese su contraseña">
         </div>
 
-         
+
 
         <button class="btn btn-primary">
             SignIn
