--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,27 +1,39 @@
+{{#each errors}}
+    {{this.msg}}
+{{/each}}
+
+{{#if todo_error}}
+    {{todo_error}}
+{{/if}}
+
 <div class="col">
     <form action="/auth/signup" method="POST">
         {{!--nombre --}}
         <div class="mb-3">
             <label for="name" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="name"  name="name" placeholder="Ingrese su nombre">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Ingrese su nombre"
+                value={{name}}>
         </div>
 
-         {{!-- correo --}}
+        {{!-- correo --}}
         <div class="mb-3">
-           <label for="email" class="form-label">Correo Electrónico</label>
-            <input type="email" class="form-control" id="email"  name="email" placeholder="Ingrese su email">
+            <label for="email" class="form-label">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email"
+                value={{email}}>
         </div>
 
-         {{!-- password --}}
+        {{!-- password --}}
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password"  name="password" placeholder="Ingrese su contraseña">
+            <input type="password" class="form-control" id="password" name="password"
+                placeholder="Ingrese su contraseña">
         </div>
 
-         {{!--confirm password --}}
+        {{!--confirm password --}}
         <div class="mb-3">
             <label for="confirm_password" class="form-label">Confirmación de contraseña</label>
-            <input type="password" class="form-control" id="confirm_password"  name="confirm_password" placeholder="Repita su contraseña">
+            <input type="password" class="form-control" id="confirm_password" name="confirm_password"
+                placeholder="Repita su contraseña">
         </div>
 
         <button class="btn btn-primary">
