Agrego middleware, validacion de post por usuario

--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -5,6 +5,13 @@
 </div>
 {{/if}}
 
+{{#if todo_error}}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>{{todo_error}}</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
+
 <div class="col">
     <form action="/auth/signin" method="POST">
 
