--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,9 +1,15 @@
 {{#each errors}}
-    {{this.msg}}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>{{this.msg}}</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>    
 {{/each}}
 
 {{#if todo_error}}
-    {{todo_error}}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong> {{todo_error}}</strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>   
 {{/if}}
 
 <div class="col">
