--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -26,6 +26,15 @@
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
         </li>
+        {{#if user}}
+        <li class="nav-item">
+          <a class="nav-link">Logout</a>
+        </li>
+        {{else}}
+         <li class="nav-item">
+          <a class="nav-link">Login</a>
+        </li>
+        {{/if}}
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
